Ajout du fichier CSS pour le plugin delay, correction d'un bug sur un slider du highpass, correction de l'overflow lorsque le nombre de plugins ajouté au board sort de l'écran

--- a/css/soundboard.css
+++ b/css/soundboard.css
@@ -88,6 +88,7 @@ audio::-webkit-media-controls-time-remaining-display {
   width:100%;
   user-select: none;
   transform:scale(1,1);
+  overflow: auto;
 }
 
 .pedals:hover {
